fixes scroll snap bug on smaller vh

--- a/design.css
+++ b/design.css
@@ -26,16 +26,18 @@ body {
     overflow-y: scroll;
 }
 
-#bumper {
-    scroll-snap-align: start !important;
-}
+@media (min-height: 700px) {
+    #bumper {
+        scroll-snap-align: start !important;
+    }
 
-#testimonials {
-    scroll-snap-align: start !important;
-}
+    #testimonials {
+        scroll-snap-align: start !important;
+    }
 
-.pricing-option{
-    scroll-snap-align: start !important;
+    .pricing-option {
+        scroll-snap-align: end !important;
+    }
 }
 
 
@@ -86,22 +88,24 @@ body {
 }
 
 #bumper .title h1,
-#bumper .title h2{
+#bumper .title h2 {
     display: block;
     width: 250px;
     text-align: center;
 }
 
-#bumper .title h1{
+#bumper .title h1 {
     font-size: 2em;
 }
-#bumper .title h2{
+
+#bumper .title h2 {
     font-size: 1.6em;
 }
 
-#testimonials *{
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+#testimonials * {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
+
 #testimonials {
     padding-left: 100px;
     padding-right: 100px;
@@ -124,9 +128,11 @@ body {
     padding-left: 0.7em;
     padding-right: 0.7em;
 }
-.testimonial > div:first-of-type{
+
+.testimonial > div:first-of-type {
     font-size: larger;
 }
+
 .testimonial > div:first-of-type,
 .testimonial > div:last-of-type {
     border-radius: 0;
@@ -150,16 +156,16 @@ body {
     text-align: right;
 }
 
-.testimonial .quote{
+.testimonial .quote {
 
 }
 
-.testimonial .customer{
+.testimonial .customer {
     text-transform: uppercase;
     background-image: url("bg.png");
 }
 
-.testimonial .customer sub{
+.testimonial .customer sub {
     display: block;
     font-size: .7em;
 }
@@ -174,16 +180,16 @@ body {
     scroll-snap-align: center;
 }
 
-.pricing-option{
+.pricing-option {
     border: 1px solid #cccccc;
     border-radius: var(--radius);
 }
 
 .pricing-option * {
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
 }
 
-.pricing-option ul{
+.pricing-option ul {
     font-size: larger;
 }
 
@@ -194,18 +200,19 @@ body {
     text-align: center;
 }
 
-.pricing-option h2{
+.pricing-option h2 {
     margin-top: 20px;
     text-align: center;
     color: goldenrod;
     font-size: 1.2em;
 }
-.pricing-option p{
+
+.pricing-option p {
     margin-left: 14px;
     margin-right: 14px;
 }
 
-button{
+button {
     cursor: pointer;
 
     width: 100%;
@@ -224,13 +231,14 @@ button{
     text-align: center;
 }
 
-button > span:first-of-type{
+button > span:first-of-type {
     font-family: "Racing Sans One";
     color: hotpink;
     text-decoration: line-through;
     margin-right: 12px;
 }
-button > span:nth-of-type(2){
+
+button > span:nth-of-type(2) {
     font-weight: lighter;
     font-size: 1em;
     color: #777777;
@@ -250,18 +258,19 @@ button + span {
     text-transform: lowercase;
 }
 
-#legal{
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+#legal {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
     padding-top: 5em;
     font-size: 0.8em;
     color: #666666;
     text-align: center;
 }
 
-#pricing-options ul{
+#pricing-options ul {
     list-style-type: none;
 }
-#pricing-options ul>li>span{
+
+#pricing-options ul > li > span {
     display: inline-block;
     width: 30px;
     height: 30px;
